// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Typography)
  sx={
    Object {
      "color": "#747474",
      "fontSize": "0.75rem",
      "ml": "14px",
      "mr": "14px",
      "mt": "3px",
    }
  }
>
  xxx
</ForwardRef(Typography)>
`;

exports[`Shallow Snapshot Tests error 1`] = `
<ForwardRef(Typography)
  sx={
    Object {
      "color": "#d32f2f",
      "fontSize": "0.75rem",
      "ml": "14px",
      "mr": "14px",
      "mt": "3px",
    }
  }
>
  xxx
</ForwardRef(Typography)>
`;
